.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-g2o-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: nest-g2o
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 32001
      protocol: TCP
