.kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /nest
            backend:
              serviceName: nest-g2o-svc
              servicePort: 80
          - path: /test
            backend:
              serviceName: nest-g2o-svc
              servicePort: 80
